--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <input id="search-field"  type="text" class="form-control" placeholder="search the phone you want" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchPhone()" class="btn btn-success" type="button" id="search-btn">search</button>
       </div>
-
+      <!-- search result -->
+      <div id="search-result" class="col mx-auto row row-cols-1 row-cols-md-3 ">
+    </div>
  </div>
         <script src="js/app.js"></script>
    
