--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button onclick="searchPhone()" class="btn btn-success" type="button" id="search-btn">search</button>
       </div>
       <!-- search result -->
-      <div id="search-result" class="col mx-auto row row-cols-1 row-cols-md-3 ">
+      <div id="search-result" class="col mx-auto row row-cols-1 m-4 row-cols-md-3">
+         
     </div>
  </div>
         <script src="js/app.js"></script>
